# Case-study-AI-Intern-Nirmaan-Edu

./: .gitignore  DEPLOYMENT_BACKEND.md  DEPLOYMENT_FRONTEND.md  README.md  RUN_LOCALLY.md  RUN_LOCALLY.txt  SETUP.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  rubric_loader.py  scoring.py  stats_calculator.py  transcript_scorer.py
frontend/: .env.example  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApproachBadge.tsx  CategorySummary.tsx  MetricCard.tsx  OverallScoreCard.tsx
frontend/src/hooks/: useScoring.ts
frontend/src/lib/: scoreUtils.ts
